--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,31 @@
 Package: HARplus
 Title: Enhanced Processing of GEMPACK .HAR and .SL4 Files
-Version: 0.0.0.9000
+Version: 1.0.0
 Authors@R: 
     person("Pattawee", "Puangchit", , "ppuangch@purdue.edu", role = c("aut", "cre"))
-Maintainer: Pattawee Puangchit <ppuangch@purdue.edu>
-Description: HARplus extends the capabilities of GEMPACK `.HAR` and `.SL4` file processing by providing 
-    advanced dimension handling, multi-file analysis, and structured metadata management. While inspired 
-    by the HARr package, originally developed by Maros Ivanic and his team, HARplus is fully independent 
-    and does not require HARr to be installed. It enhances functionality with optimized data extraction, 
-    subtotal support, and improved memory efficiency. Designed for large-scale economic modeling workflows, 
-    HARplus offers a streamlined and consistent interface for `.HAR` and `.SL4` files.
+Description: HARplus is an advanced package for processing GEMPACK `.HAR` and `.SL4` files, 
+    designed to streamline large-scale economic modeling workflows. It extends beyond 
+    traditional `.HAR` readers by offering efficient data extraction, structured metadata 
+    management, and flexible data transformations. The package supports multi-file analysis, 
+    subtotal level handling, dimension renaming, and optimized memory usage to ensure seamless 
+    handling of complex datasets. Unlike standard `.HAR` readers, HARplus enables advanced 
+    manipulations such as pivoting, renaming dimensions, exporting to multiple formats, 
+    and cross-comparing structured data across different sources. The package is fully 
+    independent and does not require the HARr package.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 BugReports: https://github.com/bodysbobb/HARplus/issues
 URL: https://github.com/bodysbobb/HARplus
+Imports:
+    openxlsx,
+    haven,
+    stats,
+    utils,
+    tidyr,
+    tools,
+    tidyselect
 Suggests: 
     knitr,
     rmarkdown
