--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(stats,setNames)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyselect,all_of)
 importFrom(tools,file_ext)
+importFrom(tools,file_path_sans_ext)
 importFrom(utils,tail)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
