--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,3 +4,6 @@ pkgdown_sha: ~
 articles:
   introduction: introduction.html
 last_built: 2025-02-23T05:37Z
+template:
+  includes:
+    in_header: extra-head.html
