--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 BugReports: https://github.com/bodysbobb/HARplus/issues
-URL: https://github.com/bodysbobb/HARplus
+URL: https://github.com/bodysbobb/HARplus, https://bodysbobb.github.io/HARplus/
 Imports:
     openxlsx,
     haven,
