--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,14 @@ Version: 1.0.1
 Author: Pattawee Puangchit <ppuangch@purdue.edu>
 Authors@R: 
     person("Pattawee", "Puangchit", , "ppuangch@purdue.edu", role = c("aut", "cre"))
-Description: HARplus is an advanced package for processing GEMPACK `.HAR` and `.SL4` files, 
-    designed to streamline large-scale economic modeling workflows. It extends beyond 
-    traditional `.HAR` readers by offering efficient data extraction, structured metadata 
-    management, and flexible data transformations. The package supports multi-file analysis, 
-    subtotal level handling, dimension renaming, and optimized memory usage to ensure seamless 
-    handling of complex datasets. Unlike standard `.HAR` readers, HARplus enables advanced 
-    manipulations such as pivoting, renaming dimensions, exporting to multiple formats, 
-    and cross-comparing structured data across different sources. The package is fully 
-    independent and does not require the HARr package.
+Description: HARplus is an R package designed to process and analyze .HAR and .SL4 files, making it easier 
+    for GEMPACK users and GTAP model researchers to handle large economic datasets. 
+    It simplifies the management of multiple experiment results, enabling faster 
+    and more efficient comparisons without complexity. With HARplus, 
+    users can extract, restructure, and merge data seamlessly, 
+    ensuring compatibility across different tools. 
+    The processed data can be exported and used in R, Stata, Python, Julia, or 
+    any software that supports .txt, CSV, or Excel formats.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
