--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(load_sl4x)
 export(pivot_data)
 export(pivot_data_hierarchy)
 export(rename_dims)
+export(save_har)
 importFrom(haven,write_dta)
 importFrom(openxlsx,addStyle)
 importFrom(openxlsx,addWorksheet)
