--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,11 +21,13 @@ importFrom(openxlsx,createStyle)
 importFrom(openxlsx,createWorkbook)
 importFrom(openxlsx,saveWorkbook)
 importFrom(openxlsx,writeData)
+importFrom(stats,complete.cases)
 importFrom(stats,setNames)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyselect,all_of)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
+importFrom(utils,read.csv)
 importFrom(utils,tail)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
