--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 BugReports: https://github.com/bodysbobb/HARplus/issues/
-URL: https://github.com/bodysbobb/HARplus/, https://bodysbobb.github.io/HARplus/
+URL: https://github.com/bodysbobb/HARplus/, https://www.pattawee-pp.com/HARplus/
 Imports:
     openxlsx,
     haven,
